--- a/privacy.html
+++ b/privacy.html
@@ -193,7 +193,7 @@
                             <li>The personal data have been collected in relation to the offer of information society services referred to in Article 8(1) of the GDPR.</li>
 
                             </ul>
-                            <p>If one of the aforementioned reasons applies, and a data subject wishes to request the erasure of personal data stored by leonalassak.com, he or she may, at any time, contact any employee of the controller. An employee of maximiliangolla.com shall promptly ensure that the erasure request is complied with immediately.</p>
+                            <p>If one of the aforementioned reasons applies, and a data subject wishes to request the erasure of personal data stored by leonalassak.com, he or she may, at any time, contact any employee of the controller. An employee of leonalassak.com shall promptly ensure that the erasure request is complied with immediately.</p>
 
                             <p>Where the controller has made personal data public and is obliged pursuant to Article 17(1) to erase the personal data, the controller, taking account of available technology and the cost of implementation, shall take reasonable steps, including technical measures, to inform other controllers processing the personal data that the data subject has requested erasure by such controllers of any links to, or copy or replication of, those personal data, as far as processing is not required. An employees of leonalassak.com will arrange the necessary measures in individual cases.</p>
                             </li>
