--- a/impressum.html
+++ b/impressum.html
@@ -92,13 +92,13 @@
                             </p>
                             <p>
                                 <h4>Kontakt:</h4>
-                                TODO Telefon: +49 234 / 32 - 28667
+                                Telefon: +49 234 / 32 - 28667
                                 E-Mail: leona.lassak@rub.de
                                 Internetadresse: www.leonalassak.com
                             </p>
                             <p>
                                 <h4>Verantwortlich iSd § 5 TMG, § 55 RfStV:</h4>
-                                Leona Lassak, Ruhr-Universität Bochum, TODO ID 2/129, Universitaetsstr. 150, 44780 Bochum.
+                                Leona Lassak, Ruhr-Universität Bochum, ID 2/129, Universitaetsstr. 150, 44780 Bochum.
                             </p>
                             <h2 class="display-6 pt-5">Haftungsausschluss</h2>
                             <p>
