--- a/privacy.html
+++ b/privacy.html
@@ -135,10 +135,10 @@
                             <p>
                                 Leona Lassak (leonalassak.com)<br>
                                 Ruhr-Universität Bochum<br>
-                                <span style="color: red">TODO</span> Gebäude ID 2/129<br>
+                                Gebäude ID 2/129<br>
                                 Universitaetsstr. 150<br>
                                 44780 Bochum, Germany<br>
-                                <span style="color: red">TODO</span> Phone: +49 234 / 32 - 28667<br>
+                                Phone: +49 234 / 32 - 28667<br>
                                 Email: leona.lassak@rub.de<br>
                                 Website: www.leonalassak.com<br>
                             </p>
