--- a/impressum.html
+++ b/impressum.html
@@ -92,8 +92,8 @@
                             </p>
                             <p>
                                 <h4>Kontakt:</h4>
-                                Telefon: +49 234 / 32 - 28667
-                                E-Mail: leona.lassak@rub.de
+                                Telefon: +49 234 / 32 - 28667<br>
+                                E-Mail: leona.lassak@rub.de<br>
                                 Internetadresse: www.leonalassak.com
                             </p>
                             <p>
