--- a/index.html
+++ b/index.html
@@ -213,7 +213,19 @@
                                 <h2 class="display-4"><i class="fa-solid fa-pen-nib"></i> Publications</h2>
                                 <hr>    
                             </row>
-                            <h3 class="display-4 pub-years">2022</h2>
+                            <h3 class="display-4 pub-years">2023</h2>
+                             <div class="row">
+                                <div class="col-lg-12">
+                                    <p>
+                                        <a class="papertitle" style="font-weight:bold; font-size: 20px;" href="https://www.usenix.org/conference/usenixsecurity21/presentation/lassak" target="_blank">"It's Stored, Hopefully, on an Encrypted Server": Mitigating Users' Misconceptions About FIDO2 Biometric WebAuthn</a>
+                                        <br>
+                                        <span style="font-family: Times New Roman; font-size: 18px;"><u>Leona Lassak</u>, Annika Hildebrandt, Maximilian Golla, and Blase Ur</span>
+                                        <br>
+                                        <a href="https://www.usenix.org/conference/usenixsecurity21" target="_blank">USENIX Security Symposium (SSYM '21)</a>
+                                    </p>
+                                </div>
+                            </div>
+                            <h3 class="display-4 pub-years">2022</h3>
                             <div class="row">
                                 <div class="col-lg-12">
                                     <p>
@@ -247,7 +259,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <h3 class="display-4 pub-years pt-2">2021</h2>
+                            <h3 class="display-4 pub-years pt-2">2021</h3>
                             <div class="row">
                                 <div class="col-lg-12">
                                     <p>
