--- a/index.html
+++ b/index.html
@@ -213,15 +213,37 @@
                                 <h2 class="display-4"><i class="fa-solid fa-pen-nib"></i> Publications</h2>
                                 <hr>    
                             </row>
-                            <h3 class="display-4 pub-years">2023</h2>
+                            <h3 class="display-4 pub-years">2024</h3>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <p>
+                                        <a class="papertitle" style="font-weight:bold; font-size: 20px;" href="https://www.usenix.org/conference/usenixsecurity24/presentation/lassak" target="_blank">Why Aren't We Using Passkeys? Obstacles Companies Face Deploying FIDO2 Passwordless Authentication</a>
+                                        <br>
+                                        <span style="font-family: Times New Roman; font-size: 18px;"><u>Leona Lassak</u>, Elleen Pan, Blase Ur, and  Maximilian Golla</span>
+                                        <br>
+                                        <a href="https://www.usenix.org/conference/usenixsecurity21" target="_blank">Conference on Human Factors in Computing Systems (CHI '24)</a>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <p>
+                                        <a class="papertitle" style="font-weight:bold; font-size: 20px;" href="https://dl.acm.org/doi/full/10.1145/3613904.3642889" target="_blank">A Comparative Long-Term Study of Fallback Authentication Schemes</a>
+                                        <br>
+                                        <span style="font-family: Times New Roman; font-size: 18px;"><u>Leona Lassak</u>, Phillip Markert, Maximilian Golla, Elizabeth Stobert, and Markus Dürmuth</span>
+                                        <br>
+                                        <a href="https://www.usenix.org/conference/usenixsecurity21" target="_blank">Conference on Human Factors in Computing Systems (CHI '24)</a>
+                                    </p>
+                                </div>
+                            </div>
                              <div class="row">
                                 <div class="col-lg-12">
                                     <p>
-                                        <a class="papertitle" style="font-weight:bold; font-size: 20px;" href="https://www.usenix.org/conference/usenixsecurity21/presentation/lassak" target="_blank">"It's Stored, Hopefully, on an Encrypted Server": Mitigating Users' Misconceptions About FIDO2 Biometric WebAuthn</a>
+                                        <a class="papertitle" style="font-weight:bold; font-size: 20px;" href="https://dl.acm.org/doi/full/10.1145/3613904.3642823" target="_blank">Understanding Users' Interaction with Login Notifications</a>
                                         <br>
-                                        <span style="font-family: Times New Roman; font-size: 18px;"><u>Leona Lassak</u>, Annika Hildebrandt, Maximilian Golla, and Blase Ur</span>
+                                        <span style="font-family: Times New Roman; font-size: 18px;">Phillip Markert, <u>Leona Lassak</u>, Maximilian Golla, and Markus Dürmuth</span>
                                         <br>
-                                        <a href="https://www.usenix.org/conference/usenixsecurity21" target="_blank">USENIX Security Symposium (SSYM '21)</a>
+                                        <a href="https://www.usenix.org/conference/usenixsecurity21" target="_blank">Conference on Human Factors in Computing Systems (CHI '24)</a>
                                     </p>
                                 </div>
                             </div>
