--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
         a.papertitle{
             color: inherit;
         }
+
+        a.papertitle:hover{
+            color: green;
+        }
         
     </style>
     <body id="page-top">
@@ -221,7 +225,7 @@
                                         <br>
                                         <span style="font-family: Times New Roman; font-size: 18px;"><u>Leona Lassak</u>, Elleen Pan, Blase Ur, and  Maximilian Golla</span>
                                         <br>
-                                        <a href="https://www.usenix.org/conference/usenixsecurity21" target="_blank">Conference on Human Factors in Computing Systems (CHI '24)</a>
+                                        <a href="https://www.usenix.org/conference/usenixsecurity24" target="_blank">USENIX Security Symposium (SSYM '24)</a>
                                     </p>
                                 </div>
                             </div>
@@ -232,7 +236,7 @@
                                         <br>
                                         <span style="font-family: Times New Roman; font-size: 18px;"><u>Leona Lassak</u>, Phillip Markert, Maximilian Golla, Elizabeth Stobert, and Markus Dürmuth</span>
                                         <br>
-                                        <a href="https://www.usenix.org/conference/usenixsecurity21" target="_blank">Conference on Human Factors in Computing Systems (CHI '24)</a>
+                                        <a href="https://chi2024.acm.org/" target="_blank">Conference on Human Factors in Computing Systems (CHI '24)</a>
                                     </p>
                                 </div>
                             </div>
@@ -243,7 +247,7 @@
                                         <br>
                                         <span style="font-family: Times New Roman; font-size: 18px;">Phillip Markert, <u>Leona Lassak</u>, Maximilian Golla, and Markus Dürmuth</span>
                                         <br>
-                                        <a href="https://www.usenix.org/conference/usenixsecurity21" target="_blank">Conference on Human Factors in Computing Systems (CHI '24)</a>
+                                        <a href="https://chi2024.acm.org/" target="_blank">Conference on Human Factors in Computing Systems (CHI '24)</a>
                                     </p>
                                 </div>
                             </div>
