--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         }
 
         a.papertitle:hover{
-            color: green;
+            color: #800101;
         }
         
     </style>
