--- a/index.html
+++ b/index.html
@@ -251,6 +251,18 @@
                                     </p>
                                 </div>
                             </div>
+                            <h3 class="display-4 pub-years">2023</h3>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <p>
+                                        <a class="papertitle" style="font-weight:bold; font-size: 20px;" href="https://www.usenix.org/conference/soups2023/presentation/lassak-poster" target="_blank">POSTER: Introducing Data Trustees: A Vignette-Based Study Approach to Get Users in the Loop</a>
+                                        <br>
+                                        <span style="font-family: Times New Roman; font-size: 18px;"><u>Leona Lassak</u>, Hanna Püschel, Tobias Gostomzyk, and  Markus Dürmuth</span>
+                                        <br>
+                                        <a href="https://www.usenix.org/conference/soups2023" target="_blank">Symposium on Usable Privacy and Security (SOUPS '23)</a>
+                                    </p>
+                                </div>
+                            </div>
                             <h3 class="display-4 pub-years">2022</h3>
                             <div class="row">
                                 <div class="col-lg-12">
