--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="p-5">
                             <h2 class="display-4">Leona Lassak</h2>
                             <hr>
-                            <p>I'm a Ph.D. student at the Ruhr University Bochum in Germany and a member of the <a href="https://informatik.rub.de/mobsec/" target="blank_">Mobile Security Group</a>; my advisor is Prof. Dr. Markus Dürmuth. I’m part of the interdisciplinary research program <a href="https://sechuman.ruhr-uni-bochum.de/" target="blank_">SecHuman</a>.</p>
+                            <p>I'm a 4th year Ph.D. student at the Ruhr University Bochum in Germany. My research covers computer security and human-computer interaction (HCI), specializing in passwordless authentication and privacy. As part of the interdisciplinary research program <a href="https://sechuman.ruhr-uni-bochum.de/" target="blank_">SecHuman</a>, I closely collaborate with legal scholars in projects concerning data privacy regulations.</p>
                         </div>
                     </div>
                 </div>
