--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <p>I'm a 4<sup>th</sup> year Ph.D. student at Ruhr University Bochum in Germany. My research covers computer security and human-computer interaction (HCI), specializing in passwordless authentication and privacy. As part of the interdisciplinary research program <a href="https://sechuman.ruhr-uni-bochum.de/" target="blank_">SecHuman</a>, I closely collaborate with legal scholars in projects concerning data privacy regulations.</p>
                         <div class="social-icons">
                             <a class="social-icon link-wo" href="https://scholar.google.com/citations?user=XrWlRnYAAAAJ" target="_blank"><i class="ai ai-google-scholar"></i></a>
-                            <a class="social-icon link-wo" href="linkedin.html" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a class="social-icon link-wo" href="https://www.linkedin.com/in/leona-lassak/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                         </div>
                         </div>
                     </div>
