--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
         a.papertitle:hover{
             color: #800101;
         }
+
+        .social-icons .social-icon {
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+          height: 3.5rem;
+          width: 3.5rem;
+          background-color: #495057;
+          color: #fff;
+          border-radius: 100%;
+          font-size: 1.5rem;
+          margin-right: 1.5rem;
+    }
         
     </style>
     <body id="page-top">
