--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!-- Font Awesome icons (free version)
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>-->
         <link href="assets/fontawesome/css/all.css" rel="stylesheet">
+        <link rel="stylesheet" href="assets/academicons/css/academicons.min.css"/>
         <!-- Google fonts
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />-->
