--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Font Awesome icons (free version)
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>-->
         <link href="assets/fontawesome/css/all.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/academicons/css/academicons.min.css"/>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
         <!-- Google fonts
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />-->
@@ -83,13 +83,14 @@
           display: inline-flex;
           align-items: center;
           justify-content: center;
-          height: 3.5rem;
-          width: 3.5rem;
+          height: 3rem;
+          width: 3rem;
           background-color: #495057;
           color: #fff;
           border-radius: 100%;
           font-size: 1.5rem;
           margin-right: 1.5rem;
+         opacity: 0.7;
     }
         
     </style>
