Fixed Typo in index.html

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                     <p>
                                         <a class="papertitle" style="font-weight:bold; font-size: 20px;" href="https://dl.acm.org/doi/full/10.1145/3613904.3642889" target="_blank">A Comparative Long-Term Study of Fallback Authentication Schemes</a>
                                         <br>
-                                        <span style="font-family: Times New Roman; font-size: 18px;"><u>Leona Lassak</u>, Phillip Markert, Maximilian Golla, Elizabeth Stobert, and Markus Dürmuth</span>
+                                        <span style="font-family: Times New Roman; font-size: 18px;"><u>Leona Lassak</u>, Philipp Markert, Maximilian Golla, Elizabeth Stobert, and Markus Dürmuth</span>
                                         <br>
                                         <a href="https://chi2024.acm.org/" target="_blank">Conference on Human Factors in Computing Systems (CHI '24)</a>
                                     </p>
@@ -186,7 +186,7 @@
                                     <p>
                                         <a class="papertitle" style="font-weight:bold; font-size: 20px;" href="https://dl.acm.org/doi/full/10.1145/3613904.3642823" target="_blank">Understanding Users' Interaction with Login Notifications</a>
                                         <br>
-                                        <span style="font-family: Times New Roman; font-size: 18px;">Phillip Markert, <u>Leona Lassak</u>, Maximilian Golla, and Markus Dürmuth</span>
+                                        <span style="font-family: Times New Roman; font-size: 18px;">Philipp Markert, <u>Leona Lassak</u>, Maximilian Golla, and Markus Dürmuth</span>
                                         <br>
                                         <a href="https://chi2024.acm.org/" target="_blank">Conference on Human Factors in Computing Systems (CHI '24)</a>
                                     </p>
